fix nav display issue on IE11

--- a/admin-base/materialize/custom/_navbar.scss
+++ b/admin-base/materialize/custom/_navbar.scss
@@ -1,4 +1,7 @@
 nav {
+  ul a{
+    display: inline-block;
+  }
   &.nav-extended {
     position: relative;
     z-index: 1;
